Updated cs projects to use lockfiles for caching

--- a/src/amenities/amenities_server/amenities_server.csproj
+++ b/src/amenities/amenities_server/amenities_server.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>e3140caf-96a2-40dc-a4b0-b0a79f61acea</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <ItemGroup>
