--- a/docker-compose/docker-compose.dev.yaml
+++ b/docker-compose/docker-compose.dev.yaml
@@ -1,6 +1,8 @@
 include:
   - ../src/guest_webapp/docker-compose.yaml     # uses port 8081
   - ../src/staff_webapp/docker-compose.yaml     # uses port 8082
+  - ../src/permissions/docker-compose.dev.yaml      # uses port 50003
+
 services:
   nginx:
     image: nginx:stable-alpine-slim
