--- a/.github/workflows/push-docker.yaml
+++ b/.github/workflows/push-docker.yaml
@@ -12,8 +12,8 @@ name: Publish Docker image
 on:
   release:
     types: [published]
-  #pull_request:
-    #branches: [  ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   push_to_registry:
