nginx container now starts once every other container is up and running

--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -15,4 +15,18 @@ services:
       - 80:80
     volumes:
       - ./configs/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - accounts_mongo
+      - accounts
+      - amenities
+      - amenities-postgres
+      - guest_webapp
+      - mongo_incident_reports_prod
+      - incident_reports
+      - permissions
+      - permissions-db
+      - staff_webapp
+      - task_system
+      - task_system_postgres
+
 
