--- a/.github/workflows/push-docker.yaml
+++ b/.github/workflows/push-docker.yaml
@@ -12,8 +12,8 @@ name: Publish Docker image
 on:
   release:
     types: [published]
-  pull_request:
-    branches: [ "main" ]
+  #pull_request:
+    #branches: [  ]
 
 jobs:
   push_to_registry:
@@ -64,18 +64,6 @@ jobs:
 
       - name: amenities
         working-directory: ./src/amenities
-        run: |
-          docker compose -f docker-compose.yaml build
-          docker compose -f docker-compose.yaml push
-
-      - name: permissions
-        working-directory: ./src/permissions
-        run: |
-          docker compose -f docker-compose.yaml build
-          docker compose -f docker-compose.yaml push
-
-      - name: task_system
-        working-directory: ./src/task_system
         run: |
           docker compose -f docker-compose.yaml build
           docker compose -f docker-compose.yaml push
