--- a/src/guest_webapp/package.json
+++ b/src/guest_webapp/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@cypress/react18": "^2.0.1",
