--- a/src/accounts/docker-compose.yaml
+++ b/src/accounts/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - 50001:8080
     depends_on:
       - accounts_mongo
+    environment:
+      - SESSION_ENDPOINT=http://permissions:8080
     env_file: 
       - .env.prod
 volumes:
