--- a/src/permissions/docker-compose.yaml
+++ b/src/permissions/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       PERMISSION_DB_HOST: permissions-db
       PERMISSION_DB_PORT: 3306
       PERMISSION_DB_NAME: permissions_db
+      ACCOUNT_ENDPOINT: http://accounts:8080
     depends_on:
       - permissions-db
   permissions-db:
