--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -36,4 +36,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: semgrep-results
-        path: ./semgrep-results/
+        path: semgrep-results.json
