--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Run Semgrep scan
       run: |
-        semgrep --config=auto .
+        semgrep --config=auto --output=semgrep-results.json .
         
     - name: Upload Semgrep results to GitHub
       if: always()
