finished updating docker files

--- a/src/staff_webapp/Dockerfile
+++ b/src/staff_webapp/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:20-alpine AS build_angular
 
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
 WORKDIR /app
 
 COPY package*.json ./
@@ -13,10 +15,15 @@ RUN npm run build --prod
 
 FROM nginx:alpine
 
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=build_angular /app/dist/staff_webapp/browser /usr/share/nginx/html
+RUN chown -R appuser:appgroup /app
+
 
 EXPOSE 80
+USER appuser
 
 CMD ["nginx", "-g", "daemon off;"]
