--- a/src/permissions/Dockerfile
+++ b/src/permissions/Dockerfile
@@ -1,5 +1,7 @@
 FROM golang:1.23.2-alpine3.20
 
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
@@ -11,6 +13,9 @@ COPY ./tests ./tests
 
 # Build the Go application
 RUN CGO_ENABLED=0 GOOS=linux go build -o server ./cmd/server
+
+RUN chown -R appuser:appgroup /app
+USER appuser
 
 # Command to run the binary
 CMD ["./server"]
