--- a/src/staff_webapp/Dockerfile
+++ b/src/staff_webapp/Dockerfile
@@ -20,7 +20,7 @@ RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=build_angular /app/dist/staff_webapp/browser /usr/share/nginx/html
-RUN chown -R appuser:appgroup /app
+RUN chown -R appuser:appgroup /usr/share/nginx/html
 
 
 EXPOSE 80
