--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies and run tests with a variety of Python versions
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Test account serivce
+name: Test and Build Services
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test_accounts:
-
+    name: Test Account Service
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -38,7 +38,7 @@ jobs:
         python3 -m unit_tests
 
   test_amenities:
-
+    name: Test Incident Reports Service
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -68,7 +68,7 @@ jobs:
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
   build:
-
+    name: Test Amenities Service
     runs-on: ubuntu-latest
 
     steps:
