Sub-resources inaccessible

--- a/docker-compose/configs/nginx.conf
+++ b/docker-compose/configs/nginx.conf
@@ -5,7 +5,10 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://guest_webapp:8080;
+            proxy_pass http://guest_webapp:80;
+        }
+        location /staff {
+            proxy_pass http://staff_webapp:80;
         }
         location /sessions {
             proxy_pass http://permissions:8080;
