Staff site now has its own endpoint

--- a/src/staff_webapp/angular.json
+++ b/src/staff_webapp/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "baseHref": "/staff/",
             "outputPath": "dist/staff_webapp",
             "index": "src/index.html",
             "browser": "src/main.ts",
