--- a/src/staff_webapp/nginx.conf
+++ b/src/staff_webapp/nginx.conf
@@ -7,12 +7,18 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    location / {
-        try_files $uri $uri/ /index.html =404;
-    }
-
-    location ~* \.(?:css|js|jpg|svg)$ {
+    location ~* ^/staff/(.*)\.(?:css|js|jpg|svg|ttf|woff2|woff|ico)$ {
+        rewrite ^/staff/(.*)$ /$1 break;
+        root /usr/share/nginx/html;
         expires 30d;
         add_header Cache-Control "public";
+    }
+
+    location /staff/ {
+        try_files $uri $uri/ /index.html;
+    }
+
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
